--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,11 +32,11 @@ jobs:
       with:
         input-file: ./files-jsonld.json
         output-file: ./report.json
-    - name: Validate JSON-LD not empty
-      uses: opendata-mvcr/lkod-github-actions/validate-jsonld-not-empty@master
-      with:
-        input-file: ./files-jsonld.json
-        output-file: ./report.json
+#    - name: Validate JSON-LD not empty
+#      uses: opendata-mvcr/lkod-github-actions/validate-jsonld-not-empty@master
+#      with:
+#        input-file: ./files-jsonld.json
+#        output-file: ./report.json
     - name: Push annotations
       uses: opendata-mvcr/lkod-github-actions/push-annotations@master
       with:
